[tool.poetry]
name = "repl_nix_vkapi"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
replit = "^3.2.4"
jose = "^1.0.0"
passlib = "^1.7.4"
app = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
